added circular popularity user score.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Movie Lists</string>
     <string name="title_overview">Overview</string>
+    <string name="user_score">User\nscore</string>
 </resources>
