--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Movie Lists</string>
     <string name="title_overview">Overview</string>
     <string name="user_score">User\nscore</string>
+    <string name="title_genres">Genres</string>
 </resources>
