--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_genres">Genres</string>
     <string name="title_not_now">Not now</string>
     <string name="action_login_as_guest">Login As Guest</string>
+    <string name="title_recommend">Recommend</string>
 </resources>
