--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="title_not_now">Not now</string>
     <string name="action_login_as_guest">Login As Guest</string>
     <string name="title_recommend">Recommend</string>
+    <string name="action_create_account">Create Account</string>
+    <string name="msg_email_example">example@email.com</string>
+    <string name="msg_password">********</string>
+    <string name="action_logout">Logout</string>
+    <string name="msg_user_has_signed_out">User has signed out.</string>
+    <string name="msg_user_has_signed_in">User has signed in</string>
 </resources>
