[WIP] changed register method to firebase services.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="action_logout">Logout</string>
     <string name="msg_user_has_signed_out">User has signed out.</string>
     <string name="msg_user_has_signed_in">User has signed in</string>
+    <string name="msg_password_not_match">Password not match</string>
+    <string name="title_password">Password</string>
+    <string name="title_retype_password">Retype Password</string>
+    <string name="title_email">Email</string>
 </resources>
