--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="title_password">Password</string>
     <string name="title_retype_password">Retype Password</string>
     <string name="title_email">Email</string>
+    <string name="title_setting">Setting</string>
+    <string name="title_search">Search</string>
+    <string name="title_home">Home</string>
+    <string name="action_login">Login</string>
 </resources>
