--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_search">Search</string>
     <string name="title_home">Home</string>
     <string name="action_login">Login</string>
+    <string name="action_go_to_favorite">Favorite List</string>
 </resources>
